Upgrade RichTextFX to Java 9+ friendly version, and remove unneeded javac/java args.